--- a/microservicecloud-config-dept-clien.yml
+++ b/microservicecloud-config-dept-clien.yml
@@ -10,21 +10,14 @@ spring:
    application: 
     name: microservicecloud-config-dept-client
    datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudDB01
+    url: jdbc:mysql://192.168.21.1:3306/jpa?allowMultiQueries=true
     username: root
-    password: 123456
-    dbcp2:
-      min-idle: 5
-      initial-size: 5
-      max-total: 5
-      max-wait-millis: 200 
+    password: "0000"
+    driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml
+  type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
+  mapper-locations: classpath:mybatis/mapper/*.xml
  
 eureka: 
   client: #客户端注册进eureka服务列表内
@@ -47,23 +40,15 @@ spring:
    application: 
     name: microservicecloud-config-dept-client
    datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudDB02
+    url: jdbc:mysql://192.168.21.1:3306/jpa?allowMultiQueries=true
     username: root
-    password: 123456
-    dbcp2:
-      min-idle: 5
-      initial-size: 5
-      max-total: 5
-      max-wait-millis: 200  
-  
-  
+    password: "0000"
+    driver-class-name: com.mysql.jdbc.Driver
+
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml
+  type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
+  mapper-locations: classpath:mybatis/mapper/*.xml
  
 eureka: 
   client: #客户端注册进eureka服务列表内
