--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -14,6 +14,8 @@ spring:
     username: root
     password: "0000"
     driver-class-name: com.mysql.jdbc.Driver
+   redis:
+      host: localhost:6380
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
   type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
@@ -44,6 +46,8 @@ spring:
     username: root
     password: "0000"
     driver-class-name: com.mysql.jdbc.Driver
+   redis:
+      host: localhost:6380 
 
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
